modules/ec2_instance/ec2-jenkins.tf


resource "aws_instance" "example" {
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name
  subnet_id     = var.subnet_id
  vpc_security_group_ids = [var.security_group_id]

  tags = merge(var.tags, {
    Name = "instance_name"
  }
}
